# revshellgen

./: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  PYPI_SETUP.md  README.md  install.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  revshellgen.py  revshellgen_cli.py  setup.py  setup_pypi.py
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  python-publish.yml  release.yml  version-bump.yml
commands/: unix_awk  unix_bash  unix_java  unix_nc_mkfifo  unix_socat_tty
revshellgen/: __init__.py  main.py
revshellgen/commands/: unix_nc_plain  unix_perl  unix_php  unix_python  unix_ruby  unix_socat  unix_telnet  windows_powershell
