[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revshellgen"
version = "2.0.0"
description = "Reverse Shell Generator - Automate reverse shell generation with style"
readme = "README.md"
authors = [
    {name = "t0thkr1s", email = "t0thkr1s@icloud.com"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.6"
dependencies = [
    "pyperclip>=1.8.2",
    "colorama>=0.4.4",
    "readchar>=3.0.4",
    "netifaces>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/t0thkr1s/revshellgen"
Repository = "https://github.com/t0thkr1s/revshellgen"
Issues = "https://github.com/t0thkr1s/revshellgen/issues"

[project.scripts]
revshellgen = "revshellgen.main:main"

[tool.setuptools]
packages = ["revshellgen"]

[tool.setuptools.package-data]
revshellgen = ["commands/*"]
